--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>BlockGPG</title>
-  <link rel="stylesheet" href="bootstrap.min.css" />
-  <link rel="stylesheet" href="app.css" />
-  <script src="bundle.js"></script>
-  <script src="app.js"></script>
-</head>
-<body>
-  <div class="site-wrapper">
-    <div class="site-wrapper-inner">
-      <div class="panel-landing" id="section-1">
-        <h1 class="landing-heading">BlockGPG</h1>
-        <p class="lead">
-          <a href="#" class="btn btn-primary btn-lg" id="signin-button">
-            Sign In with Blockstack
-          </a>
-        </p>
-      </div>
-      <div class="panel-welcome hide" id="section-2">
-        <div class="avatar-section">
-          <img src="https://s3.amazonaws.com/onename/avatar-placeholder.png" class="img-rounded avatar" id="avatar-image">
-        </div>
-        <h1>Hello, <span id="heading-name">Anonymous</span>!</h1>
-        <p class="lead">
-          <a href="#" class="btn btn-primary btn-lg" id="signout-button">
-            Logout
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>BlockGPG</title>
+  </head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
